--- a/templates/inventory/index.html
+++ b/templates/inventory/index.html
@@ -1,442 +1,85 @@
 {% extends "base.html" %} {% from "macros.jinja" import window_vars with context
-%} {% block scripts %} {{ window_vars(user) }}
-<script src="{{ static_url_for('example/static', path='js/index.js') }}"></script>
-<!-- Do not remove. Test install extension version: 2 -->
-{% endblock %} {% block page %}
-<q-dialog v-model="thingDialog.show" position="top">
-  <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card">
-    <q-form @submit="sendThingDialog" class="q-gutter-md">
-      <q-input
-        filled
-        dense
-        v-model.trim="thingDialog.data.name"
-        type="text"
-        label="Name *"
-      ></q-input>
-      <q-input
-        filled
-        dense
-        v-model.trim="thingDialog.data.email"
-        type="email"
-        label="Name *"
-      ></q-input>
-      <q-select
-        filled
-        dense
-        emit-value
-        v-model="thingDialog.data.wallet"
-        :options="g.user.walletOptions"
-        label="Wallet *"
-      ></q-select>
-      <div class="row q-mt-lg">
-        <q-btn
-          v-if="thingDialog.data.id"
-          unelevated
-          color="primary"
-          type="submit"
-          >Update thing</q-btn
+%} {% block page %}
+<div class="row q-col-gutter-md">
+  <div class="col-12 col-md-8 col-lg-7 q-gutter-y-md">
+    <q-card>
+      <q-card-section>
+        <q-btn unelevated color="primary" @click="showInventoryDialog"
+          >New Inventory</q-btn
         >
-        <q-btn
-          v-else
-          unelevated
-          color="primary"
-          :disable="thingDialog.data.name == null"
-          type="submit"
-          >Create thing</q-btn
-        >
-        <q-btn v-close-popup flat color="grey" class="q-ml-auto">Cancel</q-btn>
-      </div>
-    </q-form>
-  </q-card>
-</q-dialog>
-
-<q-card flat>
-  <q-card-section>
-    <div class="text-h5 q-mb-md">
-      Extension Development Guide
-      <small
-        >(also check the
-        <a
-          class="text-primary"
-          href="http://docs.lnbits.org/devs/development.html"
-          >docs</a
-        >)</small
-      >
-    </div>
-
-    <q-card unelevated flat>
-      <q-tabs
-        v-model="tab"
-        dense
-        class="text-grey"
-        active-color="primary"
-        indicator-color="primary"
-        align="justify"
-        narrow-indicator
-      >
-        <q-tab name="frameworks" label="Frameworks"></q-tab>
-        <q-tab name="tools" label="Useful Tools"></q-tab>
-        <q-tab name="links" label="Useful Links"></q-tab>
-        <q-tab name="goodpractice" v-if="false" label="Good Practice"></q-tab>
-        <q-tab name="enviroment" v-if="false" label="Dev Enviroment"></q-tab>
-        <q-tab
-          name="submission"
-          v-if="false"
-          label="Submisson to LNbits repo"
-        ></q-tab>
-      </q-tabs>
-
-      <q-separator></q-separator>
-
-      <q-tab-panels v-model="tab">
-        <q-tab-panel name="frameworks">
-          <div class="text-h6">Frameworks</div>
-
-          <q-tabs align="left" v-model="framworktab" inline-label>
-            <q-tab name="fastapi">
-              <img
-                :src="`${baseUrl}/example/static/fastapi-framework.png`"
-              />FASTAPI</q-tab
-            >
-            <q-tab name="quasar">
-              <img
-                :src="`${baseUrl}/example/static/quasar-framework.png`"
-              />QUASAR</q-tab
-            >
-            <q-tab name="vuejs">
-              <img
-                :src="`${baseUrl}/example/static/vuejs-framework.png`"
-              />VUE-JS</q-tab
-            >
-          </q-tabs>
-
-          <q-tab-panels v-model="framworktab">
-            <q-tab-panel name="fastapi" class="text-body1">
-              <a href="https://fastapi.tiangolo.com/">
-                <img :src="`${baseUrl}/example/static/fastapilogo.png`"
-              /></a>
-              <p>
-                LNbits API is built using
-                <a href="https://fastapi.tiangolo.com/" class="text-primary"
-                  >FastAPI</a
-                >, a high-performance, easy to code API framework.<br /><br />
-                FastAPI auto-generates swagger UI docs for testing endpoints
-                <a class="text-primary" href="../docs">/docs</a>
-              </p>
-
-              <i>
-                <strong>TIP:</strong> Although it is possible for extensions to
-                use other extensions API endpoints (such as with the Satspay and
-                Onchain extension), ideally an extension should only use LNbits
-                <a href="../docs#/default" class="text-primary">core</a>
-                endpoints. </i
-              ><br /><br />
-
-              <code class="bg-grey-3 text-black">views.py</code> is used for
-              setting application routes:
-              <img
-                :src="`${baseUrl}/example/static/fastapi-example.png`"
-              /><br /><br />
-              <code class="bg-grey-3 text-black">views_api.py</code> is used for
-              setting application API endpoints:<br />
-              <img :src="`${baseUrl}/example/static/fastapi-example2.png`" />
-            </q-tab-panel>
-            <q-tab-panel name="quasar" class="text-body1">
-              <a href="https://quasar.dev/"
-                ><img src="./static/quasarlogo.png"
-              /></a>
-              <p>
-                LNbits uses
-                <a class="text-primary" href="https://quasar.dev/"
-                  >Quasar Framework</a
-                >
-                for frontend deisgn elements. Quasar Framework is an open-source
-                Vue.js based framework for building apps.
-              </p>
-
-              <i>
-                <strong>TIP:</strong> Look through
-                <code class="bg-grey-3 text-black">/template</code> files in
-                other extensions for examples of Quasar elements being used. </i
-              ><br /><br />
-
-              <p>
-                In the below example we make a dialogue popup box (box can be
-                triggered
-                <q-btn
-                  size="sm"
-                  color="primary"
-                  @click="thingDialog.show = true"
-                  >here</q-btn
-                >): <q-tooltip>Exmple of a tooltip!</q-tooltip>
-              </p>
-              <img
-                :src="`${baseUrl}/example/static/quasar-example.png`"
-              /><br /><br />
-              <div class="text-h6">Useful links:</div>
-              <q-btn color="primary" type="a" href="https://quasar.dev/style/"
-                >Style (typography, spacing, etc)</q-btn
-              >
-              <q-btn
-                color="primary"
-                type="a"
-                href="https://quasar.dev/vue-components/"
-                >Genral components (cards, buttons, popup dialogs, etc)</q-btn
-              >
-              <q-btn
-                color="primary"
-                type="a"
-                href="https://quasar.dev/layout/grid"
-                >Layouts (rows/columns, flexbox)</q-btn
-              >
-            </q-tab-panel>
-
-            <q-tab-panel
-              v-if="someBool == true"
-              name="vuejs"
-              class="text-body1"
-            >
-              <a href="https://vuejs.org/">
-                <img :src="`${baseUrl}/example/static/vuejslogo.png`"
-              /></a>
-              <p>
-                LNbits uses
-                <a href="https://vuejs.org/" class="text-primary">Vue</a>
-                for best-in-class, responsive and high-performance components.
-              </p>
-
-              <p>Typical example of Vue components in a frontend script:</p>
-              <img
-                :src="`${baseUrl}/example/static/script-example`"
-                style="max-width: 800px"
-              /><br /><br />
-
-              <p>
-                Content can be conditionally rendered using Vue's
-                <code class="bg-grey-3 text-black">v-if</code>:
-              </p>
-              <img
-                :src="`${baseUrl}/example/static/vif-example.png`"
-                style="max-width: 800px"
-              />
-            </q-tab-panel>
-          </q-tab-panels>
-        </q-tab-panel>
-
-        <q-tab-panel name="tools">
-          <div class="text-h6">Useful Tools</div>
-          <div>
-            <q-tabs v-model="usefultab" align="left">
-              <q-tab name="magicalg">MAGICAL G</q-tab>
-              <q-tab name="exchange">EXCHANGE RATES</q-tab>
-              <q-tab name="qrcodes">QR CODES</q-tab>
-              <q-tab name="websockets">WEBSOCKETS</q-tab>
-            </q-tabs>
-            <q-tab-panels v-model="usefultab">
-              <q-tab-panel name="magicalg" class="text-body1">
-                <div class="text-h5 q-mb-md">Magical G</div>
-                <p>
-                  A magical "g" (ie
-                  <code class="bg-grey-3 text-black"
-                    >this.g.user.wallets[0].inkey</code
-                  >) is always available, with info about the user, wallets and
-                  extensions:
-                </p>
-                <code class="text-caption">{% raw %}{{ g }}{% endraw %}</code>
-              </q-tab-panel>
-              <q-tab-panel name="exchange">
-                <div class="text-h6">Exchange rates</div>
-                <p>
-                  LNbits includes a handy
-                  <a
-                    href="../docs#/default/api_fiat_as_sats_api_v1_conversion_post"
-                    class="text-primary"
-                    >exchange rate function</a
-                  >, that streams rates from 6 different sources.
-                </p>
-                Exchange rate API:<br />
-                <img
-                  :src="`${baseUrl}/example/static/conversion-example.png`"
-                /><br /><br />
-                Exchange rate functions, included using
-                <code class="bg-grey-3 text-black"
-                  >from lnbits.utils.exchange_rates import
-                  fiat_amount_as_satoshis</code
-                >:<br />
-                <img
-                  :src="`${baseUrl}/example/static/conversion-example2.png`"
-                />
-              </q-tab-panel>
-              <q-tab-panel name="qrcodes" class="text-body1">
-                <div class="text-h5 q-mb-md">QR Codes</div>
-                <p>For most purposes use Quasar's inbuilt VueQrcode library:</p>
-                <img :src="`${baseUrl}/example/static/qrcode-example1.png`" />
-                <p>
-                  LNbits does also include a handy
-                  <a
-                    href="../docs#/default/img_api_v1_qrcode__data__get"
-                    class="text-primary"
-                  >
-                    QR code enpoint</a
-                  >
-                </p>
-                {% raw %} You can use via
-                <a
-                  href="/api/v1/qrcode/some-data-you-want-in-a-qrcode"
-                  class="text-primary"
-                  >{{protocol + location}}{% endraw
-                  %}/api/v1/qrcode/some-data-you-want-in-a-qrcode:</a
-                ><br />
-                <br />
-                <img :src="`${baseUrl}/example/static/qrcode-example.png`" />
-                <br />
-                <img
-                  class="bg-white"
-                  width="300px"
-                  src="/api/v1/qrcode/some-data-you-want-in-a-qrcode"
-                />
-
-                <br />
-              </q-tab-panel>
-
-              <q-tab-panel name="websockets" class="text-body1">
-                <div class="text-h5 q-mb-md">Websockets</div>
-                <p>
-                  Fastapi includes a great
-                  <a
-                    class="text-primary"
-                    href="https://fastapi.tiangolo.com/advanced/websockets/#websockets-client"
-                    >websocket tool</a
-                  >
-                </p>
-                {% raw %}
-                <p>
-                  A few LNbits extensions also make use of a weird and useful
-                  websocket/GET tool built into LNbits, such as extensions
-                  Copilot and LNURLDevices<br />
-                  You can subscribe to websocket with
-                  <code class="bg-grey-3 text-black"
-                    >wss:{{location}}/api/v1/ws/{SOME-ID}</code
-                  ><br />
-                  You can post to any clients subscribed to the endpoint with
-                  <code class="bg-grey-3 text-black"
-                    >{{protocol +
-                    location}}/api/v1/ws/{SOME-ID}/{THE-DATA-YOU-WANT-TO-POST}</code
-                  ><br />
-                  <br />
-                  <strong
-                    ><div id="text-to-change">
-                      DEMO: Hit
-                      <a
-                        target="_blank"
-                        href="/api/v1/ws/32872r23g29/blah%20blah%20blah"
-                        class="text-primary"
-                        >{{protocol +
-                        location}}/api/v1/ws/32872r23g29/blah%20blah%20blah</a
-                      >
-                      in a different browser window to change this text to `blah
-                      blah blah`.
-                    </div></strong
-                  >
-                  <br />
-                  Function used in this demo:<br />
-                  <img
-                    :src="`${baseUrl}/example/static/websocket-example.png`"
-                  /></p
-              ></q-tab-panel>
-
-              {% endraw %}
-            </q-tab-panels>
-          </div>
-        </q-tab-panel>
-        <q-tab-panel name="links">
-          <div class="text-h6">Useful links</div>
-          <q-list bordered separator>
-            <q-item
-              clickable
-              tag="a"
-              href="https://github.com/lnbits"
-              target="_blank"
-            >
-              <q-item-section avatar>
-                <q-icon name="code" />
-              </q-item-section>
-              <q-item-section>
-                <q-item-label class="text-bold"
-                  >LNbits GitHub Repository</q-item-label
-                >
-                <q-item-label caption>
-                  Includes the LNbits repo and other useful repositories like
-                  <strong>lnbits-extensions</strong> for submitting extensions
-                  and many LNbits-related projects.
-                </q-item-label>
-              </q-item-section>
-            </q-item>
-
-            <q-item
-              clickable
-              tag="a"
-              href="https://www.youtube.com/channel/UCGXU2Ae5x5K-5aKdmKqoLYg"
-              target="_blank"
-            >
-              <q-item-section avatar>
-                <q-icon name="ondemand_video" />
-              </q-item-section>
-              <q-item-section>
-                <q-item-label class="text-bold"
-                  >LNbits YouTube Channel</q-item-label
-                >
-                <q-item-label caption>
-                  Features useful tutorials and updates, including how to build
-                  your own extension.
-                </q-item-label>
-              </q-item-section>
-            </q-item>
-
-            <q-item
-              clickable
-              tag="a"
-              href="https://www.youtube.com/@makerbits7700"
-              target="_blank"
-            >
-              <q-item-section avatar>
-                <q-icon name="build" />
-              </q-item-section>
-              <q-item-section>
-                <q-item-label class="text-bold"
-                  >Makerbits YouTube Channel</q-item-label
-                >
-                <q-item-label caption>
-                  Offers great hardware tutorials for projects that integrate
-                  with LNbits.
-                </q-item-label>
-              </q-item-section>
-            </q-item>
-          </q-list>
-        </q-tab-panel>
-
-        <q-tab-panel v-if="false" name="goodpractice">
-          <div class="text-h6">Good Practice</div>
-          Coming soon...
-        </q-tab-panel>
-
-        <q-tab-panel v-if="false" name="enviroment">
-          <div class="text-h6">Dev Enviroment</div>
-          Coming soon...
-        </q-tab-panel>
-
-        <q-tab-panel v-if="false" name="submission">
-          <div class="text-h6">
-            Submission
-            <a
-              href="https://github.com/lnbits/lnbits-extensions?tab=readme-ov-file#lnbits-vetted-extensions"
-              >(fetched from https://github.com/lnbits/lnbits-extensions)</a
-            >
-          </div>
-          <div v-html="vettedData"></div>
-        </q-tab-panel>
-      </q-tab-panels>
+      </q-card-section>
     </q-card>
-  </q-card-section>
-</q-card>
+    <q-card v-if="inventories.length">
+      <q-list>
+        <template v-for="(inventory, index) in inventories" :key="inventory.id">
+          <q-expansion-item
+            expand-icon-toggle
+            expand-separator
+            icon="inventory"
+            :label="inventory.name"
+            :caption="inventory.currency"
+            header-class="q-py-md"
+          >
+            <q-card>
+              <q-card-section>
+                <q-table
+                  flat
+                  bordered
+                  title="Treats"
+                  :rows="rows"
+                  :columns="columns"
+                  row-key="id"
+                  :filter="filter"
+                  :loading="loading"
+                >
+                  <template v-slot:top>
+                    <q-btn
+                      color="primary"
+                      :disable="loading"
+                      label="Add row"
+                      @click="addRow"
+                    />
+                    <q-btn
+                      v-if="rows.length !== 0"
+                      class="q-ml-sm"
+                      color="primary"
+                      :disable="loading"
+                      label="Remove row"
+                      @click="removeRow"
+                    />
+                    <q-space />
+                    <q-input
+                      borderless
+                      dense
+                      debounce="300"
+                      color="primary"
+                      v-model="filter"
+                    >
+                      <template v-slot:append>
+                        <q-icon name="search" />
+                      </template>
+                    </q-input>
+                  </template>
+                </q-table>
+              </q-card-section>
+            </q-card>
+          </q-expansion-item>
+          <q-separator v-if="index < inventories.length -1"></q-separator>
+        </template>
+      </q-list>
+    </q-card>
+  </div>
+  <div class="col-12 col-md-4 col-lg-5 q-gutter-y-md">
+    <q-card>
+      <q-card-section>
+        <h6 class="text-subtitle1 q-my-none">
+          {{SITE_TITLE}} Inventory extension
+        </h6>
+      </q-card-section>
+    </q-card>
+  </div>
+  {% include "inventory/_dialogs.html" %}
+</div>
+{% endblock %} {% block scripts %} {{ window_vars(user) }}
+<script src="{{ static_url_for('inventory/static', path='js/index.js') }}"></script>
 {% endblock %}
