--- a/templates/inventory/_dialogs.html
+++ b/templates/inventory/_dialogs.html
@@ -62,6 +62,7 @@
         </q-tooltip>
       </q-toggle>
       <q-card-actions class="q-mt-lg" align="between">
+        <q-btn v-close-popup flat color="grey">Cancel</q-btn>
         <q-btn
           v-if="inventoryDialog.data.id"
           unelevated
@@ -78,7 +79,6 @@
           type="submit"
           >Create Inventory</q-btn
         >
-        <q-btn v-close-popup flat color="grey" class="q-ml-auto">Cancel</q-btn>
       </q-card-actions>
     </q-form>
   </q-card>
@@ -256,12 +256,55 @@
         label="Is Active"
       ></q-toggle>
 
-      <div class="row q-mt-lg">
+      <q-card-actions class="q-mt-lg" align="between">
+        <q-btn v-close-popup flat color="grey">Cancel</q-btn>
         <q-btn unelevated color="primary" type="submit">
           <span> Add Item</span></q-btn
         >
-        <q-btn v-close-popup flat color="grey" class="q-ml-auto">Cancel</q-btn>
-      </div>
+      </q-card-actions>
+    </q-form>
+  </q-card>
+</q-dialog>
+
+<q-dialog
+  v-model="managerDialog.show"
+  position="top"
+  @hide="closeManagerDialog"
+>
+  <q-card class="q-pa-lg q-pt-xl" style="width: 500px">
+    <q-form @submit="submitManagerData" class="q-gutter-md">
+      <q-input
+        filled
+        dense
+        v-model.trim="managerDialog.data.name"
+        label="Manager Name *"
+        hint="Manager identifier for your reference"
+      ></q-input>
+      <q-input
+        filled
+        dense
+        v-model.trim="managerDialog.data.email"
+        label="Manager Email (Optional)"
+      ></q-input>
+      <q-card-actions class="q-mt-lg" align="between">
+        <q-btn v-close-popup flat color="grey">Cancel</q-btn>
+        <q-btn
+          v-if="managerDialog.data.id"
+          unelevated
+          color="primary"
+          type="submit"
+          :disable="!managerDialog.data.name"
+          >Update Manager</q-btn
+        >
+        <q-btn
+          v-else
+          unelevated
+          color="primary"
+          :disable="!managerDialog.data.name"
+          type="submit"
+          >Create Manager</q-btn
+        >
+      </q-card-actions>
     </q-form>
   </q-card>
 </q-dialog>
