--- a/templates/inventory/index.html
+++ b/templates/inventory/index.html
@@ -76,9 +76,9 @@
                     <q-item-section side>
                       <!-- <q-item-label caption>2 min ago</q-item-label> -->
                       <div class="">
-                        <q-icon name="star"></q-icon>
-                        <q-icon name="star"></q-icon>
-                        <q-icon name="star"></q-icon>
+                        <q-icon name="preview"></q-icon>
+                        <q-icon name="edit"></q-icon>
+                        <q-icon name="delete"></q-icon>
                       </div>
                     </q-item-section>
                   </q-item>
