--- a/templates/inventory/_dialogs.html
+++ b/templates/inventory/_dialogs.html
@@ -142,7 +142,7 @@
         <div class="col-12 col-md-6">
           <q-input
             filled
-            v-model.trim="itemDialog.data.image"
+            v-model.trim="itemDialog.data.images"
             label="Image URL"
             placeholder="URL of the item image"
           ></q-input>
