wip: admin dashboard

--- a/templates/inventory/_dialogs.html
+++ b/templates/inventory/_dialogs.html
@@ -222,7 +222,7 @@
         <div class="col-12 col-sm-4">
           <q-input
             filled
-            v-model.number="itemDialog.data.stock_quantity"
+            v-model.number="itemDialog.data.quantity_in_stock"
             min="0"
             type="number"
             label="Stock Quantity"
